* introduce body bcdSingletonHolder div where bcdCalendar, bcdAutocompletionBox, etc should be attached
* tab menu fires custom events (bcd:widget.tab.hide bcd:widget.tab.show) on the single tab areas
* inputField gets hideWildcardChar option to not attach asterisk characters (dimchooser supports it via dimconfig)
* tabMenu can be persisten

. Core
* Promise polyfill: ecma6-promise (used for IE)
* Wrs: add support for JDBC SQLXML type
* SimpleModel: add saveChain/Parameters to be able to modify save actions
* DataProvider: added support for xpath with placeholders/fill parameters for query/queryNodes/read/write/remove operations. Mainly for handling quote/apostrophe issues when dynamically building up xPath Expressions
    Example: bcdui.wkModels.guiStatus.read("//guiStatus:ClientSettings/guiStatus:Test[@caption='{{=it[0]}}' and @caption2='{{=it[1]}}']", ["china's republic", "drag\"n drop"]);
* BindingSet Relation added IsLike condition for joins
* filterRowsTemplate gets enhancement of condition attributes and filterlists
* moved save handling from simpple model to data provider

. Themes
* theme update: the new bcd-ui theme is based on Bootstrap v4.3.1, with FontAwesome 5.8.1 included
* new pageEffect bcdEffectPageStickyFooter
* HtmlBuilderTemplate passes-through any attribute on wrs:C in {http://www.w3.org/1999/xhtml} namespace - prefixed by 'html' - and merges html:class appropriately
* HtmlBuilderTemplate sets bcdNegNumber class on an element in case number's value is negative

. Security
* Server writing passwords is now secured and salt is added automatically
* added implicit subjectFilter bcd_userId:userId with fixed filter value
* client-controlled subject filters
** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
** client-controlled subject filters can be set from client via bcdui.util.security API