@@ -48,6 +48,7 @@ The Renderer either works directly with the specified element or (in case of spe
 * tab menu fires custom events (bcd:widget.tab.hide bcd:widget.tab.show) on the single tab areas
 * inputField gets hideWildcardChar option to not attach asterisk characters (dimchooser supports it via dimconfig)
 * tabMenu can be persisten
+* New PasteList widget with support of in-clause
 
 . Core
 * Promise polyfill: ecma6-promise (used for IE)
